<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
   >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/img"
        android:src="@drawable/l1"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/FN"
            android:paddingRight="20dp"
            android:paddingTop="17dp"
            android:textColor="@color/red_logo"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textColor="@color/red_logo"
            android:backgroundTint="@color/red_logo"
            android:id="@+id/FN"></EditText>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/LN"
                android:paddingRight="20dp"
                android:paddingTop="17dp"
                android:textColor="@color/red_logo"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:textColor="@color/red_logo"
                android:backgroundTint="@color/red_logo"
                android:id="@+id/LN"></EditText>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:paddingRight="20dp"
            android:paddingTop="17dp"
            android:textColor="@color/red_logo"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textColor="@color/red_logo"

            android:backgroundTint="@color/red_logo"
            android:id="@+id/age"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:paddingRight="20dp"
            android:paddingTop="17dp"
            android:textColor="@color/red_logo"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textColor="@color/red_logo"

            android:backgroundTint="@color/red_logo"
            android:id="@+id/email_2"></EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/pas"
            android:paddingRight="20dp"
            android:paddingTop="17dp"
            android:textColor="@color/red_logo"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textColor="@color/red_logo"

            android:backgroundTint="@color/red_logo"
            android:id="@+id/pass_2"></EditText>

    </LinearLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="20px"
        android:id="@+id/RBTN_group">
        <TextView
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:text="@string/gender"
            android:paddingRight="20dp"
            android:paddingTop="17dp"
            android:textColor="@color/red_logo"
            />
        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:text="@string/MA"
           android:layout_marginRight="25dp"
            android:textColor="@color/red_logo"
            android:checked="true"
            android:id="@+id/male"


        />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FM"
            android:textColor="@color/red_logo"
            android:id="@+id/female"

            />

    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green_logo"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:id="@+id/signup2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask2"
            android:textColor="@color/red_logo"/>
        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/signin"
            android:textColor="@color/red_logo"
            android:id="@+id/signin2"
            />
    </LinearLayout>


        </LinearLayout>




